--- a/ApiTest/templates/processApi.html
+++ b/ApiTest/templates/processApi.html
@@ -836,8 +836,8 @@
             , cols: [[ //表头, fixed: 'left'
                 {type: 'checkbox'}
                 , {title: '操作', toolbar: '#barDemo', width: 80, align: "left"}
-                , {field: 'caseid', title: '序号', width: 60, align: "center"}
-                , {field: 'identity', title: '', width: 70, align: "center", templet: "#identityTpl"}
+                , {field: 'caseid', title: '序号', width: 60, align: "left"}
+                , {field: 'identity', title: '角色', width: 100, align: "left", templet: "#identityTpl"}
                 , {
                     field: 'casename',
                     title: '接口名称',
@@ -848,7 +848,7 @@
                     children: [
                         {
                             elem: '#templateTable'
-                            , url: "//"
+                            , url: "/singleapi/parameter_details/"
                             , where: function (row) {
                                 console.log(row);
                                 return {caseid: row.caseid}
@@ -889,8 +889,8 @@
                                     style: 'background-color: #eee;'
                                 }
                                 , {
-                                    field: 'dataType',
-                                    title: '请求类型',
+                                    field: 'sample',
+                                    title: '示例',
                                     width: 190,
                                     align: "left",
                                     style: 'background-color: #eee;'
@@ -2467,19 +2467,24 @@
 <!--用户身份模板-->
 <script type="text/html" id="identityTpl">
     {% verbatim %}{{#  if(d.identity === 'sysadmin'){ }}{% endverbatim %}
-    <img src="../static/images/640-1.jpeg" class="layui-nav-img">
+    <span>{% verbatim %}系统管理员{% endverbatim %}</span>
+{#    <img src="../static/images/640-1.jpeg" class="layui-nav-img">#}
 
     {% verbatim %}{{# } else if(d.identity=== 'admin') { }} {% endverbatim %}
-    <img src="../static/images/640-4.jpeg" class="layui-nav-img">
+    <span>{% verbatim %}单位管理员{% endverbatim %}</span>
+{#    <img src="../static/images/640-4.jpeg" class="layui-nav-img">#}
 
     {% verbatim %}{{# } else if(d.identity=== 'ast') { }} {% endverbatim %}
-    <img src="../static/images/640-5.jpeg" class="layui-nav-img">
+    <span>{% verbatim %}单位档案员{% endverbatim %}</span>
+{#    <img src="../static/images/640-5.jpeg" class="layui-nav-img">#}
 
     {% verbatim %}{{# } else if(d.identity=== 'transferadmin') { }} {% endverbatim %}
-    <img src="../static/images/640-2.jpeg" class="layui-nav-img">
+    <span>{% verbatim %}暂放{% endverbatim %}</span>
+{#    <img src="../static/images/640-2.jpeg" class="layui-nav-img">#}
 
     {% verbatim %}{{# } else if(d.identity=== 'tdradmin') { }} {% endverbatim %}
-    <img src="../static/images/640-6.jpeg" class="layui-nav-img">
+    <span>{% verbatim %}数据管理员{% endverbatim %}</span>
+{#    <img src="../static/images/640-6.jpeg" class="layui-nav-img">#}
     {% verbatim %}{{#  } }}{% endverbatim %}
 </script>
 
