--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -513,13 +513,6 @@
             <form class="layui-form" lay-filter="add_parameter">
 
                 <div class="layui-form-item" style="margin-top: 20px;">
-                    <label class="layui-form-label">父表序号</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="caseid" required lay-verify="required"
-                               autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item" style="margin-top: 20px;">
                     <label class="layui-form-label">请求参数</label>
                     <div class="layui-input-block">
                         <input type="text" name="parameter_field" required lay-verify="required"
@@ -780,7 +773,7 @@
                             {#, toolbar: '#toolbarchiildDemo'#}
                             ,toolbar:
                                 '<div>' +
-                                ' <a type="button" class="layui-btn layui-btn-normal layui-btn-sm" onclick="add_parameter()">添加参数</a>' +
+                                ' <a class="layui-btn layui-btn-normal layui-btn-sm" lay-event="add_parameter">添加参数</a>' +
                                 '<a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="reload">重载表格</a>' +
                                 ' <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="close">关闭表格</a>' +
                                 '</div>'
@@ -956,14 +949,78 @@
                                 // obj 子表当前行对象
                                 // pobj 父表当前行对象
                                 if (obj.event === 'reload') {
-                                    table.reload(this.id)
-                                    layer.msg('子表重载成功！')
+                                    //重载子表
+                                    table.reload(this.id);
+                                    layer.msg('重载成功！')
                                 } else if (obj.event === 'delete') {
+                                    //删除父行
                                     pobj.del()
                                 } else if (obj.event === 'update') {
+                                    //更新父行数据
                                     pobj.update({dynasty: pobj.data.dynasty + '+1'})
                                 } else if (obj.event === 'close') {
+                                    //关闭子表
                                     pobj.close()
+                                } else if (obj.event === "add_parameter") {
+                                    var parent_id = pobj.data.caseid;
+                                    var Create_apicase = layer.open({
+                                        //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
+                                        type: 1,
+                                        title: "添加请求参数",
+                                        skin: "layui-layer-molv",
+                                        shade: 0.6,
+                                        area: ['30%', ''],
+                                        content: $("#add_parameter").html(),
+                                        success: function () {
+                                            layui.use(['form', 'jquery'], function () {
+                                                var form = layui.form,
+                                                    $ = layui.$;
+                                                //监听编辑用户信息，
+                                                form.on('submit(add_parameter)', function (data) {
+                                                    $.ajax({
+                                                        cache: false,
+                                                        url: "/api/v1/singleapi/add_parameter/",
+                                                        type: 'POST',
+                                                        data: {
+                                                            "parameter_field": data.field.parameter_field,
+                                                            "parameter_that": data.field.parameter_that,
+                                                            "area": data.field.area,
+                                                            "isMust": data.field.isMust,
+                                                            "sample": data.field.sample,
+                                                            "parent_id": parent_id
+                                                        },
+                                                        beforeSend: function () {
+                                                            l_index = layer.load(0, {shade: [0.5, '#DBDBDB']});
+                                                        },
+                                                        success: function (data) {
+                                                            if (data.code === 1000) {
+                                                                layer.msg(data.msg, {
+                                                                    icon: 6, offset: "t"
+                                                                })
+                                                            } else {
+                                                                layer.msg(data.error, {
+                                                                    icon: 5, offset: "t"
+                                                                })
+                                                            }
+                                                            table.reload(this.id);
+                                                        },
+                                                        error: function () {
+                                                            layer.msg("回调失败", {
+                                                                icon: 5,
+                                                                offset: 't'
+                                                            });
+                                                        },
+                                                        complete: function () {
+                                                            layer.close(l_index);
+                                                            layer.close(Create_apicase);
+                                                        }
+
+                                                    });
+                                                    return false;//阻止表单跳转
+                                                });
+                                            });
+                                        }
+                                    });
                                 }
                             }
                             , checkboxEvent: function (obj, pobj) {
@@ -1900,120 +1957,6 @@
 
             }
         });
-        table.on('tool(child)', function (obj) {
-            var data = obj.data;
-            if (obj.event === 'del_parameter') {
-                console.log(1111);
-                layer.confirm('真的删除行么', {icon: 2, title: "删除提示"}, function (index) {
-                    console.log(obj.data);
-                    //layer.msg("确定删除",{icon:1});
-                    obj.del();//删除对应行（tr）的DOM结构，并更新缓存
-                    layer.close(index);
-                    //向服务端发送删除指令
-                    var id = obj.data["caseid"];
-                    console.log(id);
-                    $.ajax({
-                        cache: false,
-                        url: "/api/v1/singleapi/del_case/" + id + "/",
-                        type: 'DELETE',
-                        success: function (data) {
-                            if (data.code === 1000) {
-                                layer.msg(data.msg, {
-                                    icon: 6, offset: "t"
-                                })
-                            } else {
-                                layer.msg(data.error, {
-                                    icon: 5, offset: "t"
-                                })
-                            }
-                            $(".layui-laypage-btn").click();
-                        },
-                        error: function () {
-                            layer.msg("回调失败", {
-                                icon: 5,
-                                offset: 't'
-                            });
-                        },
-                    });
-                });
-            } else if (obj.event === 'update_parameter') {
-                var a = layer.open({
-                    type: 1,
-                    title: "编辑用例",
-                    area: ['35%', ""],
-                    skin: "layui-layer-molv",
-                    shada: 0.6,
-                    content: $("#update_case").html(),
-                    success: function () {
-                        layui.use(['form', 'jquery'], function () {
-                            var form = layui.form;
-                            $ = layui.$;
-                            var caseid = data.caseid;
-                            form.val("update_case", {
-                                "casename": data.casename,
-                                "identity": data.identity,
-                                "url": data.url,
-                                "method": data.method,
-                                "belong": data.belong,
-                                "params": data.params,
-                                "body": data.body,
-                                "head": data.head
-                            });
-                            //监听编辑用户信息，
-                            form.on('submit(update_case)', function (data) {
-                                console.log(data.field);
-                                $.ajax({
-                                    cache: false,
-                                    url: "/api/v1/singleapi/update_case/" + String(caseid) + "/",
-                                    type: 'PUT',
-                                    data: {
-                                        "belong": data.field.belong,
-                                        "body": data.field.body,
-                                        //"caseID": data.field.caseID,
-                                        "casename": data.field.casename,
-                                        "identity": data.field.identity,
-                                        "method": data.field.method,
-                                        "params": data.field.params,
-                                        "system": '{{ system }}',
-                                        "url": data.field.url,
-                                        "head": data.field.head
-                                    },
-                                    beforeSend: function () {
-                                        l_index = layer.load(0, {shade: [0.5, '#DBDBDB']});
-                                    },
-                                    success: function (data) {
-                                        if (data.code === 1000) {
-                                            layer.msg(data.msg, {
-                                                icon: 6, offset: "t"
-                                            })
-                                        } else {
-                                            layer.msg(data.error, {
-                                                icon: 5, offset: "t"
-                                            })
-                                        }
-                                        $(".layui-laypage-btn").click();
-                                    },
-                                    error: function () {
-                                        layer.msg("回调失败", {
-                                            icon: 5,
-                                            offset: 't'
-                                        });
-                                    },
-                                    complete: function () {
-                                        layer.close(l_index);
-                                        layer.close(a);
-                                    }
-
-                                });
-                                return false;//阻止表单跳转
-                            });
-                        });
-                    }
-                });
-
-            }
-        });
-
     });
 
 </script>
@@ -2344,70 +2287,6 @@
 
         });
     }
-
-    //添加参数
-    function add_parameter() {
-        var Create_apicase = layer.open({
-            //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
-            type: 1,
-            title: "添加请求参数",
-            skin: "layui-layer-molv",
-            shade: 0.6,
-            area: ['30%', ''],
-            content: $("#add_parameter").html(),
-            success: function () {
-                layui.use(['form', 'jquery'], function () {
-                    var form = layui.form,
-                        $ = layui.$;
-                    //监听编辑用户信息，
-                    form.val("add_parameter");
-                    form.on('submit(add_parameter)', function (data) {
-                        $.ajax({
-                            cache: false,
-                            url: "/api/v1/singleapi/add_parameter/",
-                            type: 'POST',
-                            data: {
-                                "parameter_field": data.field.parameter_field,
-                                "parameter_that": data.field.parameter_that,
-                                "area": data.field.area,
-                                "isMust": data.field.isMust,
-                                "sample": data.field.sample,
-                                "parent_id": data.field.caseid
-                            },
-                            beforeSend: function () {
-                                l_index = layer.load(0, {shade: [0.5, '#DBDBDB']});
-                            },
-                            success: function (data) {
-                                if (data.code === 1000) {
-                                    layer.msg(data.msg, {
-                                        icon: 6, offset: "t"
-                                    })
-                                } else {
-                                    layer.msg(data.error, {
-                                        icon: 5, offset: "t"
-                                    })
-                                }
-                                $(".layui-laypage-btn").click();
-                            },
-                            error: function () {
-                                layer.msg("回调失败", {
-                                    icon: 5,
-                                    offset: 't'
-                                });
-                            },
-                            complete: function () {
-                                layer.close(l_index);
-                                layer.close(Create_apicase);
-                            }
-
-                        });
-                        return false;//阻止表单跳转
-                    });
-                });
-            }
-        });
-    }
-
 
 </script>
 
