--- a/ApiTest/templates/search.html
+++ b/ApiTest/templates/search.html
@@ -1618,7 +1618,7 @@
         <button type="button" onclick="update_role_info()" class="layui-btn layui-btn-sm">用户信息</button>
         <button id="Runcase" class="layui-btn layui-btn-sm" lay-event="run_case">执行用例</button>
         <button class="layui-btn layui-btn-sm" lay-event="repeat_run">重复执行</button>
-        <button id="Dingding" class="layui-btn layui-btn-sm" lay-event="dingding">钉钉通知</button>
+        <button id="Dingding" class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
         <button class="layui-btn layui-btn-sm" lay-event="locust">性能测试</button>
     </div>
 </script>
